[gd_scene load_steps=14 format=2]

[ext_resource path="res://Assets/Scenes/UI/DialogContainer.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/UI/FilledSlotDialog.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/MainMenu/TitleLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/UI/SlotsContainer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Sprites/MainMenu/back.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/MainMenu/background.png" type="Texture" id=6]
[ext_resource path="res://Assets/Styles/MenuButtonPressedStyle.tres" type="StyleBox" id=7]
[ext_resource path="res://Assets/Scripts/Menus/SaveGameMenu/SaveGameMenu.gd" type="Script" id=8]
[ext_resource path="res://Assets/Scripts/Menus/MainMenu/BackButton.gd" type="Script" id=9]
[ext_resource path="res://Assets/Fonts/HeavyEquipment.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Assets/Scenes/UI/UITransition.tscn" type="PackedScene" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 10 )

[node name="SaveGameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="Background" type="TextureRect" parent="."]
margin_left = -270.0
margin_right = 2370.0
margin_bottom = 1080.0
texture = ExtResource( 6 )

[node name="BackButton" type="Button" parent="."]
margin_left = 50.0
margin_top = 900.0
margin_right = 180.0
margin_bottom = 997.0
focus_mode = 0
custom_styles/pressed = ExtResource( 7 )
custom_styles/focus = SubResource( 1 )
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
script = ExtResource( 9 )

[node name="UITransition" parent="BackButton" instance=ExtResource( 11 )]
delay = 0.5
hidden_relative_position = Vector2( -900, 0 )

[node name="SlotsContainer" parent="." instance=ExtResource( 4 )]

[node name="UITransition" parent="SlotsContainer" instance=ExtResource( 11 )]
margin_left = 763.0
margin_top = 135.0
margin_right = 763.0
margin_bottom = 135.0
time = 0.5
delay = 0.5
hidden_relative_position = Vector2( 0, 1000 )

[node name="SAVE" parent="." instance=ExtResource( 3 )]
text = "SAVE GAME"
content = "SAVE GAME"
underline_color = Color( 0.0627451, 0.92549, 1, 1 )
underline_shadow_color = Color( 0, 0.776471, 0.843137, 1 )

[node name="UITransition" parent="SAVE" instance=ExtResource( 11 )]
hidden_relative_position = Vector2( -1000, 0 )

[node name="Text" type="Label" parent="."]
modulate = Color( 0, 0, 0, 1 )
margin_left = 57.0
margin_top = 272.0
margin_right = 1395.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 2 )
text = "Please choose a save slot to create a new game."

[node name="UITransition" parent="Text" instance=ExtResource( 11 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 40.0
margin_bottom = 40.0
delay = 0.35
hidden_relative_position = Vector2( -1500, 0 )

[node name="DialogContainer" parent="." instance=ExtResource( 1 )]
DialogNodePath = NodePath("FilledSlotDialog")

[node name="FilledSlotDialog" parent="DialogContainer" instance=ExtResource( 2 )]
margin_left = -585.5
margin_top = -265.0
margin_right = 585.5
margin_bottom = 265.0

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="slot_pressed" from="SlotsContainer" to="." method="_on_SlotsContainer_slot_pressed"]
[connection signal="confirmed" from="DialogContainer/FilledSlotDialog" to="." method="_on_FilledSlotDialog_confirmed"]
